Update to TurboFrames + added Rspec tests

--- a/app/views/details/edit.html.erb
+++ b/app/views/details/edit.html.erb
@@ -1,3 +1,5 @@
 <h1>Edit detail</h1>
-<%= render 'form', person: @person %>
-<%= link_to 'Back', people_path %>
+<%= turbo_frame_tag "details_form" do %>
+  <%= render 'form', person: @person %>
+
+<% end %>
