--- a/app/views/details/new.html.erb
+++ b/app/views/details/new.html.erb
@@ -1,3 +1,4 @@
-<h1>New detail</h1>
-<%= render 'form', detail: @detail %>
-<%#= link_to 'Back', person_detail_path %>
+<%= turbo_frame_tag "details_form" do %>
+  <%= render 'form', person: @person %>
+
+<% end %>
