--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,4 +1,5 @@
-<h1><%= @person.name %></h1>
+<!-- Assuming you have a show.html.erb for Person -->
 
-<%= link_to 'Edit', edit_person_path(@person) %> |
-<%= link_to 'Back to List', people_path %>
+<%= turbo_frame_tag "details_form" do %>
+  <%= render "details/details", person: @person %>
+<% end %>
